--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/bouton-skate.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap 5 CDN Link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
